@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2014, 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2014, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,7 +29,6 @@ import javax.xml.parsers.SAXParser;
 import javax.xml.parsers.SAXParserFactory;
 
 import org.testng.Assert;
-import org.testng.annotations.Listeners;
 import org.testng.annotations.Test;
 import org.xml.sax.XMLReader;
 
@@ -37,11 +36,9 @@ import org.xml.sax.XMLReader;
  * @test
  * @bug 6506304
  * @library /javax/xml/jaxp/libs /javax/xml/jaxp/unittest
- * @run testng/othervm -DrunSecMngr=true -Djava.security.manager=allow parsers.Bug6506304Test
  * @run testng/othervm parsers.Bug6506304Test
  * @summary Test MalformedURLException: unknown protocol won't be thrown when there is a space within the full path file name.
  */
-@Listeners({jaxp.library.BasePolicy.class})
 public class Bug6506304Test {
     public static boolean isWindows = false;
     static {
