@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2017, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2017, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -36,7 +36,6 @@
  * @run main/othervm TestDriver
  */
 
-import jdk.test.lib.JDKToolFinder;
 import jdk.test.lib.process.ProcessTools;
 
 import java.io.IOException;
@@ -48,40 +47,27 @@ import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 public class TestDriver {
     private static final String ARCHIVE_NAME = "test.jar";
     private static final String TEST_NAME = "Test";
-    private static final String POLICY_FILE = "policy";
     public static void main(String[] args)
             throws Throwable {
 
         Path userDir = Paths.get(System.getProperty("user.dir"));
-        String java = JDKToolFinder.getTestJDKTool("java");
         String basename = userDir.getFileName().toString();
         setup(userDir);
         ProcessBuilder[] tests = new ProcessBuilder[]{
-                new ProcessBuilder(
-                        java, TEST_NAME, "./" + ARCHIVE_NAME
+                ProcessTools.createTestJavaProcessBuilder(
+                        TEST_NAME,
+                        "./" + ARCHIVE_NAME
                 ),
-                new ProcessBuilder(
-                        java, "-cp", ".",
-                        "-Djava.security.policy=file:./policy",
-                        "-Djava.security.manager",
+                ProcessTools.createTestJavaProcessBuilder(
+                        "-cp", ".",
                         TEST_NAME, "./" + ARCHIVE_NAME
                 ),
-                new ProcessBuilder(
-                        java, "-cp", ".",
-                        "-Djava.security.policy=file:./policy",
-                        "-Djava.security.manager",
-                        TEST_NAME, "./" + ARCHIVE_NAME
-                ),
-                new ProcessBuilder(
-                        java, "-cp", "..",
-                        "-Djava.security.policy=file:../policy",
-                        "-Djava.security.manager",
+                ProcessTools.createTestJavaProcessBuilder(
+                        "-cp", "..",
                         TEST_NAME, "../" + ARCHIVE_NAME
                 ).directory(userDir.resolve("tmp").toFile()),
-                new ProcessBuilder(
-                        java, "-cp", basename,
-                        "-Djava.security.policy=file:" + basename + "/policy",
-                        "-Djava.security.manager",
+                ProcessTools.createTestJavaProcessBuilder(
+                        "-cp", basename,
                         TEST_NAME, basename + "/" + ARCHIVE_NAME
                 ).directory(userDir.resolve("..").toFile())};
         for (ProcessBuilder test : tests) {
@@ -92,11 +78,9 @@ public class TestDriver {
     private static void setup(Path userDir) throws IOException {
         Path src = Paths.get(System.getProperty("test.src"));
         Path testJar = src.resolve(ARCHIVE_NAME);
-        Path policy = src.resolve(POLICY_FILE);
         Path testClass = Paths.get(System.getProperty("test.classes"),
                                    TEST_NAME + ".class");
         Files.copy(testJar, userDir.resolve(ARCHIVE_NAME), REPLACE_EXISTING);
-        Files.copy(policy, userDir.resolve(POLICY_FILE), REPLACE_EXISTING);
         Files.copy(testClass, userDir.resolve(TEST_NAME + ".class"),
                    REPLACE_EXISTING);
         Files.createDirectories(userDir.resolve("tmp"));
