@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -84,22 +84,8 @@ public class GetResourceBundleTest {
     }
 
     @Test
-    public void runWithoutSecurityManager() throws Exception {
+    public void run() throws Exception {
         int exitValue = executeTestJava(
-                "-cp", PKG_DEST_DIR.toString(),
-                "--module-path", MOD_DEST_DIR.toString(),
-                "--add-modules", String.join(",", modules),
-                "p3.test.ResourceBundleTest")
-                .outputTo(System.out)
-                .errorTo(System.err)
-                .getExitValue();
-        assertTrue(exitValue == 0);
-    }
-
-    @Test
-    public void runWithSecurityManager() throws Exception {
-        int exitValue = executeTestJava(
-                "-Djava.security.manager",
                 "-cp", PKG_DEST_DIR.toString(),
                 "--module-path", MOD_DEST_DIR.toString(),
                 "--add-modules", String.join(",", modules),
